# test-failer-in-c-Revitalizer1

./: CMakeLists.txt  Makefile  main-test.cpp  misaligned.c  tshirts.c  weatherreport.c
src/: misaligned.c  misaligned.h  tshirts.c  tshirts.h  weatherreport.c  weatherreport.h
test/: expected_pairs.txt  test.cpp  test_misaligned.c  test_misaligned.cpp  test_tshirts.c  test_tshirts.cpp  test_weatherreport.c  test_weatherreport.cpp
